# Continuum

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
deploy/hooks/: continuum_autosave.py
deploy/huggingface/: Dockerfile  README.md
docs/: ADD-ANYWHERE.md  ARCHITECTURE.md  CONTINUUM-VS-COGNEE.md  DEPLOY.md  FEATURES.md  GETTING-STARTED.md  INTEGRATIONS.md  README.md  SCALING.md  STATUS-AND-ROADMAP.md  SWITCHING-PLATFORMS.md  USE-CASES.md
examples/: sample_conversation.txt
site/: .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
site/app/: globals.css  layout.tsx  page.tsx
site/scripts/: extract.mjs
src/continuum/: __init__.py  _logging.py  adapters.py  cli.py  config.py
src/continuum/engine/: __init__.py  composer.py  continuum.py  extractor.py  meter.py  portable.py  refine.py  salience.py
src/continuum/llm/: __init__.py  client.py
src/continuum/memory/: __init__.py  base.py  cognee_backend.py  cognee_cloud_backend.py  local_backend.py
src/continuum/models/: __init__.py  reasoning.py  workspace.py
src/continuum/surfaces/: __init__.py  api.py  mcp_server.py
tests/: test_adapters.py  test_api.py  test_backends.py  test_portable.py  test_salience.py  test_scale_features.py  test_smoke.py
